--- a/Makefile.ci
+++ b/Makefile.ci
@@ -75,7 +75,14 @@ run-local: ## Run api via `go run`
 	NATS_URL=nats://127.0.0.1:4222 \
 	NATS_WS_URL=ws://127.0.0.1:8080 \
 	SERVER_RSA_PRIVATE_KEY="$$SERVER_RSA_PRIVATE_KEY" \
-	go run -ldflags "-X main.buildTag=`date -u +%Y%m%d.%H%M%S`-$(LATEST_COMMIT)" -race cmd/api/main.go &
+	SOLANA_STAKE_POOL_ADDR=4pm3G48wWGrbUVF3JHLDrgVniQi7eSkRyx5bwXnawC2z \
+    SOLANA_SYSTEM_PROGRAM=11111111111111111111111111111111 \
+    SOLANA_SYSVAR_RENT=SysvarRent111111111111111111111111111111111 \
+    SOLANA_SYSVAR_CLOCK=SysvarC1ock11111111111111111111111111111111 \
+    SOLANA_SPL_TOKEN=TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA \
+    SOLANA_STAKE_PROGRAM_ID=CL9tjeJL38C3eWqd6g7iHMnXaJ17tmL2ygkLEHghrj4u \
+    QUIZ_V2_SHUFFLE_QUESTIONS=false \
+	go run -ldflags "-X main.buildTag=`date -u +%Y%m%d.%H%M%S`-$(LATEST_COMMIT)" -race cmd/api/main.go &> sator-api.log &
 migrate-local: ## Run all migrations on local environment
 	@rm -Rvf migrations/*.sql && \
 	cp -Rvf ./svc/**/repository/sql/migrations/*.sql migrations/ && \
